--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <img src="https://i.ibb.co/fm89sHJ/logo-bico-frio-1.png" alt="logo bico frio (1)" border="0">
             </div>
             <a href="https://wa.me/5562993666203?text=Ol%C3%A1%2C%20gostaria%20de%20um%20or%C3%A7amento%20para%20ar-condicionado."
-                class="btn btn-outline" target="_blank">WhatsApp (62) 99366-6203</a>
+                class="btn btn-outline" target="_blank">(62) 99366-6203</a>
         </div>
     </header>
 
